--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,21 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Ecommerce</title>
+    <link 
+      rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+      integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    >
+    <title>React Form</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
